# folio-mcp

./: .gitignore  CHANGELOG.md  README.md  glama.json  manifest.json  pyproject.toml  server.json  smithery.yaml
folio_mcp/: __init__.py  helpers.py  server.py
folio_mcp/backends/: __init__.py  _branch_data.py  api.py  local.py  protocol.py
skills/folio/: SKILL.md
skills/folio-classify-asset/: SKILL.md
skills/folio-classify-document/: SKILL.md
skills/folio-classify-entity/: SKILL.md
skills/folio-classify-event/: SKILL.md
skills/folio-classify-industry/: SKILL.md
skills/folio-identify-area-of-law/: SKILL.md
skills/folio-identify-engagement-terms/: SKILL.md
skills/folio-identify-forum-venue/: SKILL.md
skills/folio-identify-legal-authority/: SKILL.md
skills/folio-identify-objective/: SKILL.md
skills/folio-identify-service-type/: SKILL.md
tests/: conftest.py  test_tools.py
